@@ -11,6 +11,19 @@
 
 	Backported from mainline.
 
+	2012-12-04  Jakub Jelinek  <jakub@redhat.com>
+
+	PR testsuite/55587
+	* lib/asan-dg.exp (asan_init): Return 1 if libasan has been found,
+	0 if not.
+	* g++.dg/asan/asan.exp: Don't run gcc-dg-runtest if [asan_init]
+	returned 0.
+	* gcc.dg/asan/asan.exp: Likewise.
+
+2013-06-20  Manjunath Matti <mmatti@caviumnetworks.com>
+
+	Backported from mainline.
+
 	2012-12-03  Jakub Jelinek  <jakub@redhat.com>
 
 	PR sanitizer/55439
